# SMART

./: .gitignore  CITATION.cff  Cargo.toml  LICENSE  MANIFEST.in  README.md  pymesh.py  pyproject.toml  setup.py  setup_cpp.py
.github/workflows/: ci.yml  wheels.yml
cmake/: ftetwild_compat.cmake
configs/: README.md  candidate_bitset_fast_experimental.yaml  demo.yaml  example_3x3.yaml  expanded_200.yaml  expanded_full.yaml  expanded_processed_16.yaml  hybrid_local_search_experimental.yaml  learned_default.yaml  learned_frontier.yaml  learned_macro_program_gate_top3.yaml  learned_macro_refine_only.yaml  preprocess_fast.yaml  rl_policy_topk_experimental.yaml  smoke_5.yaml  stateful_union_cache_experimental.yaml
cpp/: README.md  manifold_bridge.cpp  smart_cpp_module.cpp  smart_native_cli.cpp  smart_native_core.cpp  smart_native_core.hpp  smart_native_engine.cpp  smart_native_engine.hpp
data/: README.md
docs/: CURRENT_STATUS.md  LEARNED_ROUTER.md  LEARNED_ROUTER_RELEASE.md  MANIFOLD_PERFORMANCE_NOTES.md  OPTIMIZATION_IDEAS.md  PIPELINE.md  PYTHON_PACKAGE.md  QUICKSTART.md  RELEASE.md  RELEASE_NOTES_0.1.0.md  REPOSITORY_STRUCTURE.md  RESEARCH_PLAN.md  RL_RESEARCH_PLAN.md  SMART_PIPELINE.md  TETRA_FAILURE_PLAYBOOK.md
examples/: README.md  prepare_sample_shapes.sh  run_example_3x3.sh  run_learned_frontier.sh  run_native_one.sh
experiments/: README.md
paper/learned_router_cvpr/: Makefile  README.md  main.tex  refs.bib  supplementary.tex
patches/: ftetwild_smart_crash_guards.patch
rust/smart-core/: Cargo.toml  build.rs  pyproject.toml
rust/smart-core/src/: lib.rs  manifold_bridge.cpp
scripts/: README.md  __init__.py  analyze_pipeline_failures.py  audit_release_wheel.py  benchmark_action_prior_generalization.py  benchmark_exact_stateful_sweep.py  benchmark_fixed_prior_by_category.py  benchmark_manifold_volume_methods.py  benchmark_mcts_acceleration_profiles.py  benchmark_reward_backends.py  benchmark_rust_parity.py  build_action_prior_from_traces.py  ci_build_manifold.py  collect_action_traces.py  collect_candidate_traces.py  compare_tet_clipping_manifold.py  evaluate_local_refine_gate.py  experiment_bitset_prefilter.py  export_local_refine_gate_dataset.py  prepare_shapenet_samples.py  quickstart_reproduce.py  release_preflight.py  run_learned_macro_combined_gate.py  run_learned_macro_release_gate.py  run_macro_replay_balanced_chunks.py  run_quality_guarded_local_refine.py  run_quality_guarded_mcts.py  smoke_console_scripts.py  smoke_native_sanitizers.py  sweep_mcts_action_prior.py  sweep_tet_clipping_parity.py  train_action_prior_from_traces.py  train_local_refine_gate.py
smart/: __init__.py  action_prior.py  api.py  box_proposal.py  candidate_pruning_gate.py  cli.py  cpp.py  evaluation.py  local_refine_gate.py  macro_skills.py  native.py  native_compat.py  native_executable.py  native_runner.py  pymesh_compat.py  quality.py  rust.py
smart/assets/gates/: local_refine_gate_manifest52.json
smart/assets/policies/: deepset_setaware_v2_h128_dagger_b2_v12.smartmlp  deepset_setaware_v2_h128_v1.smartmlp
smart/assets/priors/: airplane_offline_rl_mlp_prior.json  category_general_all_available_offline_rl_mlp_prior.json  category_general_candidate_pg_agent_cat3_prior.json  category_general_expanded_full_mlp_prior.json  category_general_policy_gradient_agent_prior.json  category_general_policy_value_agent_prior.json  chair_offline_rl_mlp_prior.json  local_refine_policy_value_final_return_cat10.json  smoke5_coord_scale_prior.json  table_offline_rl_mlp_prior.json
smart/assets/skills/: macro_budget_quality_rule_v1.json  macro_memory_policy_v1.json  macro_quality_gate_ridge_v1.json  macro_skill_candidates_4k_v1.jsonl  macro_skill_knowledge_base_v1.json  macro_skill_retriever_macrohash_v1.json
smart/configs/: __init__.py  accelerated_exact.yaml  accelerated_search_experimental.yaml  candidate_bitset_exact_experimental.yaml  demo.yaml  expanded_processed_smoke.yaml  learned_auto_safe.yaml  learned_default.yaml  learned_macro_mcts_replacement_guarded.yaml  learned_macro_mcts_replacement_learned_only.yaml  learned_macro_safe.yaml  paper_like.yaml  properties_volume_experimental.yaml  rl_multiweight_guard_experimental.yaml  rl_search_experimental.yaml  smoke_5.yaml  stateful_exact_experimental.yaml
smart/legacy/: __init__.py
smart/legacy/merging/: __init__.py  greedy_all.py  run.py
smart/legacy/merging/configs/: __init__.py  args.py
smart/legacy/merging/configs/split/: test_mesh.txt  train_mesh.txt
smart/legacy/merging/src/: eval.py  gen_dataset.py  greedy.py  greedy_chanho.py  train.py  var3dseg.py
smart/legacy/merging/src/buffer/: buffer.py  perbuffer.py
smart/legacy/merging/src/datamodules/: tetmesh_datamodule.py
smart/legacy/merging/src/environment/: multi_tetmesh_environment.py  tetmesh_environment.py
smart/legacy/merging/src/models/: dqn.py  policies.py
smart/legacy/merging/src/utils/: bounding_box.py  bsp_preseg.py  l2_preseg.py  preseg.py  utils.py
smart/legacy/mesh2tet/: README.md  __init__.py
smart/legacy/mesh2tet/scripts/: __init__.py
smart/legacy/refine/: __init__.py  run.py
smart/legacy/refine/configs/: __init__.py  args.py
smart/legacy/refine/configs/split/: train_mesh.txt
smart/legacy/refine/scripts/greedy/: greedy_all.py  greedy_all1.sh  greedy_all2.sh  greedy_all3.sh  greedy_all4.sh
smart/legacy/refine/scripts/mcts/: mcts_all.py  mcts_all1.sh  mcts_all2.sh  mcts_all3.sh  run_mcts1.sh  run_mcts2.sh
smart/legacy/refine/src/: eval.py  greedy.py  mcts.py  train.py
smart/legacy/renderer/: __init__.py  blender_mesh_teaser.py  boxes.blend  render_all.py  render_all_teaser.py  render_teaser.py  vis_utils.py
smart/pipeline/: __init__.py  config.py  manifest.py  runner.py  stages.py  tools.py
tests/: README.md  test_action_prior.py  test_action_prior_generalization.py  test_config.py  test_cpp_extension.py  test_evaluation.py  test_local_refine_gate.py  test_mcts_policy_topk.py  test_native_compat.py  test_quality_guard.py  test_release_wheel_audit.py  test_rust_fallback.py
(+67 files in other folders)
