[build-system]
requires = ["setuptools>=68", "wheel", "pybind11>=2.12"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-bbox"
version = "0.1.14"
description = "Official SMART pipeline for tight 3D bounding boxes"
readme = "README.md"
requires-python = ">=3.9"
license = "CC-BY-NC-SA-4.0"
authors = [
  {name = "Chanhyeok Park"},
]
keywords = ["3d", "bounding-boxes", "shape-abstraction", "mesh", "mcts", "c++"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: C++",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
  "numpy",
  "PyYAML",
]

[project.optional-dependencies]
pipeline = [
  "scipy",
  "scikit-learn",
  "trimesh",
  "torch",
  "tensorboard",
  "tqdm",
  "typing_extensions",
  "coacd",
  "rtree",
  "matplotlib",
]
dev = [
  "pytest",
  "cibuildwheel>=2.22",
  "twine",
  "wheel",
]

[project.scripts]
smart = "smart.cli:main"
smart-cpp-native = "smart.native_executable:main"
smart-audit-wheel = "scripts.audit_release_wheel:main"
smart-smoke-console-scripts = "scripts.smoke_console_scripts:main"
smart-release-preflight = "scripts.release_preflight:main"
smart-quickstart = "scripts.quickstart_reproduce:main"

[project.urls]
Homepage = "https://github.com/chpark1111/SMART"
Repository = "https://github.com/chpark1111/SMART"
Paper = "https://arxiv.org/abs/2304.04336"

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["past_codes", "smart/vendor", "runs", "external"]

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-*"
skip = "pp* *-musllinux* *-win32 *-win_amd64"
before-build = "python -m pip install PyYAML 'cmake<4' && SMART_CI_CLEAN_MANIFOLD_BUILD=0 python scripts/ci_build_manifold.py"
test-requires = ["PyYAML", "numpy<2.4"]
test-command = "cd {project}/.. && python -c \"import smart, smart.native as sn, smart.cpp as sc, smart.pymesh_compat as compat, pymesh; from smart.pipeline.config import load_config; from smart.pipeline.tools import diagnose_environment; status = diagnose_environment(load_config('smoke_5.yaml')); checks = {c['name']: c for c in status['checks']}; assert sn.using_cpp(); assert sc.using_cpp(); assert smart.cpp_native_available(); assert smart.NativeSmartEngine is sc.NativeSmartEngine; assert smart.native_executable_path() is not None; assert compat.form_mesh is pymesh.form_mesh; assert checks['smart-cpp-extension']['ok']; assert checks['smart-cpp-native']['ok']\""
