[package]
name = "smart-core"
version = "0.1.0"
edition = "2021"
description = "Exact Rust acceleration kernels for the SMART tight bounding box pipeline"
license = "CC-BY-NC-SA-4.0"
homepage = "https://github.com/chpark1111/SMART"
repository = "https://github.com/chpark1111/SMART"
build = "build.rs"

[lib]
name = "smart_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22" }

[features]
default = []
extension-module = ["pyo3/extension-module"]
